@@ -7,40 +7,97 @@ version '1.0'
 
 repositories {
     mavenCentral()
-    maven {
-        url "https://plugins.gradle.org/m2/"
+}
+
+
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 }
 
 apply plugin: "java"
-apply plugin: "org.sonarqube"
 
 //sourceCompatibility = 17
+
 
 compileJava {options.encoding = "UTF-8"}
 compileTestJava {options.encoding = "UTF-8"}
 
 dependencies {
-    // Dependencias del proyecto
+  //  implementation 'junit:junit:4.13.2'
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.9.1')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.1')
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.7.0'
+    testImplementation("io.github.bonigarcia:webdrivermanager:5.3.1")
+    testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '7.10.1'
+    implementation group: 'io.cucumber', name: 'cucumber-java', version: '7.10.1'
+    testImplementation group: 'io.cucumber', name: 'cucumber-picocontainer', version: '7.10.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
+    testImplementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.5'
+    implementation group: 'tech.grasshopper', name: 'extentreports-cucumber7-adapter', version: '1.9.2'
+    implementation group: 'com.aventstack', name: 'extentreports', version: '5.0.9'
+    implementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.9.1'
 }
 
 test {
-    // Configuración para pruebas
+    jvmArgs '--enable-preview'
+    useJUnitPlatform()
+}
+configurations {
+    cucumberRuntime {
+        extendsFrom testImplementation
+    }
 }
 
-sonarqube {
+sonar {
     properties {
         property 'sonar.host.url', 'http://45.33.22.170:9000/'
-        // Otras propiedades de SonarQube según tus necesidades
     }
 }
 
 def tags = (findProperty('tags') == null) ? 'not @Ignore' : findProperty('tags') + ' and not @Ignore'
 
 task runWithCucumber() {
-    // Configuración del task para ejecutar con Cucumber
+    dependsOn assemble , testClasses
+    doLast {
+        javaexec {
+            main = "io.cucumber.core.cli.Main"
+            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
+            if(tags.contains(",")){
+                tags = tags.replace(",", " or ")
+            }
+            args = [
+                    '--threads', '1',
+                    '--plugin', 'pretty' ,
+                    '--plugin', 'json:src/test/resources/output/report/Cucumber.json',
+                    '--plugin', 'com.aventstack.extentreports.cucumber.adapter.ExtentCucumberAdapter:',
+                    '--glue', 'steps',
+                    'src/test/resources/features',
+                    '--tags', "${tags}"]
+        }
+    }
 }
 
 task runWithCucumberforDebug() {
-    // Configuración del task para ejecutar con Cucumber en modo debug
+    dependsOn assemble, testClasses
+    doLast {
+        javaexec {
+            main = "io.cucumber.core.cli.Main"
+            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
+            if(tags.contains(",")){
+                tags = tags.replace(",", " or ")
+            }
+            args = [
+                    '--threads', '1',
+                    '--plugin', 'pretty' ,
+                    '--plugin', 'json:src/test/resources/output/report/Cucumber.json',
+                    '--plugin', 'com.aventstack.extentreports.cucumber.adapter.ExtentCucumberAdapter:',
+                    '--glue', 'steps',
+                    'src/test/resources/features',
+                    '--tags', "${tags}"]
+        }
+    }
 }
